add authorization to the end points
