# book/docs/swagger.json
@@ -6,8 +6,7 @@
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "email": "bsse0807@iit.du.ac.bd"
         },
         "license": {
             "name": "Apache 2.0",
@@ -20,6 +19,11 @@
     "paths": {
         "/books": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "get books",
                 "consumes": [
                     "application/json"
@@ -75,6 +79,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "post book",
                 "consumes": [
                     "application/json"
@@ -127,6 +136,11 @@
         },
         "/books/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "get books",
                 "consumes": [
                     "application/json"
@@ -176,6 +190,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "delete book",
                 "consumes": [
                     "application/json"
@@ -225,6 +244,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "patch book",
                 "consumes": [
                     "application/json"
@@ -394,8 +418,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
